# game-host/openapi/game_host_openapi.yaml
@@ -21,6 +21,21 @@ paths:
       responses:
         "200":
           description: Default Response
+  /cron/cleanup:
+    get:
+      description: Cleanup completed games
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  deletedCount:
+                    type: number
+                required:
+                  - deletedCount
   /db/migrations:
     get:
       responses:
